<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/welcome_text"
        android:textSize="22sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toTopOf="@+id/playButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:contentDescription="@string/play_button_description"
        android:foreground="@drawable/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
        app:srcCompat="@drawable/play_button_img" />

    <TextView
        android:id="@+id/rulesHeadingText"
        android:layout_width="181dp"
        android:layout_height="26dp"
        android:text="@string/game_rules"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="245dp" />

</androidx.constraintlayout.widget.ConstraintLayout>